# Eagle-Planner

./: .breakpoints  main.py  package-lock.json  package.json  pyproject.toml  readme.md
static/: script.js  style.css
templates/: index.html
